Added my opinion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 </head>
 	<body>
-		<h1> Warcraft III </h1>
+		<h1> Warcraft III on mötetu mäng </h1>
 		<img src="http://us.blizzard.com/static/_images/games/war3/wallpapers/wall2/wall2-800x600.jpg">
 	</body>
 </html>
